# warevolved

./: .gitignore  AUTHORS  CONTRIBUTING  Doxyfile  HELP  LICENSE  License  Makefile.am  README  TODO  TODO.archive  autogen.sh  bootstrap  configure  configure.ac  resources.xml  svn_log  tst.xml
core/src/: Makefile  context.h  debug.c  error.c  init.c  init.h  struct_core.h  struct_gameplay.h  structures.h  we
core/think/: begin  concept  request
doc/: BUGS  coding_style  description_legacy  map_xml_format_specifications  tree
doc/features/: map_save_load
doc/think/: concept  context  events  graphics  map.xml
lib/: Makefile.am
lib/pugixml/: VERSION  pugiconfig.hpp
map/: 2players_vehicles.xml  building.xml  map.xml
src/: Makefile  Makefile.am  constantes.h  debug.h  error.h  grid.c  grid.h  main.c  main.cc  mycotext.h
src/common/: Debug.cc  Debug.hh  Parameters.hh  Settings.cc  Settings.hh  State.cc  State.hh  Status.cc  Status.hh  System.cc  System.hh  Text.cc  Text.hh  constants.hh  debug.hh  direction.hh  globals.hh  include.hh  interface.hh  macros.hh  mode.hh  path_shape.hh  terrains.hh  types.hh  units.hh  using.hh
src/common/debug/: Debug.cc  Debug.hh  EnumPrint.cc  EnumPrint.hh  OSD.cc
src/common/enums/: attack_result.hh  directions.hh  factions.hh  input.hh  mode.hh  modes.hh  panel_status.hh  path_shape.hh  path_shapes.hh  ranks.hh  states.hh  terrains.hh  types.hh  units.hh
src/common/structures/: ThreadSafeQueue.hh  ThreadSafeQueue.hxx  Vector.hh
src/config/: Settings.cc  Settings.hh
src/context/: State.cc  State.hh  StateEditMap.cc  StateEditMap.hh  StateFactory.cc  StateFactory.hh  StateGlobal.cc  StateGlobal.hh  StateInventory.cc  StateInventory.hh  StateMenu.cc  StateMenu.hh  StateMenu2d.cc  StateMenu2d.hh  StateMenuBuilding.cc  StateMenuBuilding.hh  StateMenuCrew.cc  StateMenuCrew.hh  StateMovingUnit.cc  StateMovingUnit.hh  StatePlaying.cc  StatePlaying.hh  StateSelectCell.cc  StateSelectCell.hh  StateSelectDropZone.cc  StateSelectDropZone.hh  StateSelectExitZone.cc  StateSelectExitZone.hh  StateSelectTarget.cc  StateSelectTarget.hh  StatesFactory.cc  StatesFactory.hh
src/core/: Context.cc  Context.hh  Game.cc  Game.hh  GraphicEngine.cc  GraphicEngine.hh
src/debug/: Debug.cc  Debug.hh  Debug.hxx  EnumPrint.cc  EnumPrint.hh  EventsLogger.cc  EventsLogger.hh  OSD.cc  OSD.hh  OSD.hxx
src/game/: Battle.cc  Battle.hh  Building.cc  Building.hh  Cell.cc  Cell.hh  Cursor.cc  Cursor.hh  Game.cc  Game.hh  Inventory.cc  Inventory.hh  Item.cc  Item.hh  ItemsContainer.cc  ItemsContainer.hh  Map.cc  Map.hh  PathElement.cc  PathElement.hh  PathFinding.cc  PathFinding.hh  Player.cc  Player.hh  Status.cc  Status.hh  Status.hxx  Terrain.cc  Terrain.hh  TerrainsHandler.cc  TerrainsHandler.hh  Unit.cc  Unit.hh  path_shapes.hh
src/game/applications/: Application.cc  Application.hh  Battle.cc  Battle.hh
src/game/items/: Item.cc  Item.hh
src/game/items/guns/: Gun.cc  Gun.hh  Rifle.cc  Rifle.hh
src/game/units/: Car.cc  Car.hh  Motorcycle.cc  Motorcycle.hh  Soldier.cc  Soldier.hh  Team.cc  Team.hh  Unit.cc  Unit.hh  UnitFactory.cc  UnitFactory.hh  UnitStrategy.hh  UnitsFactory.cc  UnitsFactory.hh  Vehicle.cc  Vehicle.hh  unit_roles.hh
src/graphics/: Context.cc  Context.hh  GraphicEngine.cc  GraphicEngine.hh  GraphicsEngine.cc  GraphicsEngine.hh  MapGraphicsProperties.cc  MapGraphicsProperties.hh  Properties.cc  Properties.hh  SelectionMenu.cc  SelectionMenu.hh  Sprite.cc  Sprite.hh  graphic_types.hh  graphics.hh
src/input/: Event.cc  Event.hh  EventManager.cc  EventManager.hh  EventsLogger.cc  EventsLogger.hh  EventsProcessor.cc  EventsProcessor.hh  InputProcessor.cc  InputProcessor.hh  InputsListener.cc  InputsListener.hh  KeyManager.cc  KeyManager.hh  MapEventManager.cc  MapEventManager.hh  ReplayManager.cc  ReplayManager.hh
src/interface/: ActionMenu.cc  ActionMenu.hh  Cursor.cc  Cursor.hh  EntriesMenu.cc  EntriesMenu.hh  Interface.cc  Interface.hh  InterfaceBlock.hh  InterfaceElement.cc  InterfaceElement.hh  InterfaceSettings.cc  InterfaceSettings.hh  MenuEntry.cc  MenuEntry.hh  MiniMap.cc  MiniMap.hh  Panel.cc  Panel.hh  SelectionMenu.cc  SelectionMenu.hh  panel_status.hh
src/interface/menus/: EntriesMenu.cc  EntriesMenu.hh  InGameMenu.cc  InGameMenu.hh  Menu.cc  Menu.hh  MenuAction.cc  MenuAction.hh  MenuBuilding.cc  MenuBuilding.hh  MenuBuildingUnit.cc  MenuBuildingUnit.hh  MenuBuildingUnits.cc  MenuBuildingUnits.hh  MenuCrew.cc  MenuCrew.hh  MenuCrewBrowse.cc  MenuCrewBrowse.hh  MenuCrewMember.cc  MenuCrewMember.hh  MenuEntry.cc  MenuEntry.hh  MenuEntryBuildingUnit.cc  MenuEntryBuildingUnit.hh  MenuEntryCrew.cc  MenuEntryCrew.hh  MenuMap.cc  MenuMap.hh  MenuUnit.hh  MenuUnit.hxx  MenuUnitsList.hh  MenuUnitsList.hxx
src/interface/panels/: MenuBar.cc  MenuBar.hh  MenuBar.hxx  Panel.cc  Panel.hh  PanelElement.cc  PanelElement.hh  SidePanel.cc  SidePanel.hh  SidePanel.hxx
src/lib/: graphics_engine.c  pugixml.hh  sdl_memo.c
src/rapidxml/: rapidxml_utils.hpp
src/resources/: Font.cc  Font.hh  Image.cc  Image.hh  Resource.cc  Resource.hh  ResourcesManager.cc  ResourcesManager.hh  Sprite.cc  Sprite.hh  Text.cc  Text.hh
src/structures/: ThreadSafeQueue.hh  ThreadSafeQueue.hxx  Vector.hh
src/tools/: Cursor.cc  Cursor.hh  Fps.cc  Fps.hh  OptionsParser.cc  OptionsParser.hh  Random.cc  Random.hh  Random.hxx  StringParser.cc  StringParser.hh
src/tools/options/: Option.cc  Option.hh  OptionsParser.cc  OptionsParser.hh
tests/: test.sh
tests/regression/: .#dead_lock_move_unit.sh  dead_lock_move_unit.map  dead_lock_move_unit.replay  dead_lock_move_unit.sh  escape_map.sh
tests/unit/: Makefile.am  main.cc
tests/unit/lib/doctest/: VERSION
tests/utils/: build.sh  log.sh  options_parser.sh
think/: arbo  concept  context  events  factions  functions  game  gameplay  interface  menu  network  request  thread_events
tools/: build_resources_xml.sh  check_build_time.awk  check_headers.sh  coding_style.sh  cpp_static_analysers.sh  create_test_from_replay.sh  get_creation_date.sh  lib_updaters.sh  libs_updater.sh  pugixml_updater.sh
(+15 files in other folders)
